compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__true_fn.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 494
expression: let True(x) = 1 x

---
error: Incorrect arity
  ┌─ /src/one/two.gleam:1:5
  │
1 │ let True(x) = 1 x
  │     ^^^^^^^ expected 0 arguments, got 1


